Bug 163816 Leaking 1 nsAccessibilityService and a bunch of nsGenericAccessible's r=aaronl, sr=peterv fix the wrong type cast in nsRootAccessible::AddAccessibleEventListener and get rid of the strong pointer to nsHTMLIFrameAccessible in nsHTMLIFrameRootAccessible